--- a/config.yml
+++ b/config.yml
@@ -18,5 +18,5 @@ db:
   port: 27017
 input_strategies: [ 1 ]
 # for logging level reference https://docs.python.org/3/library/logging.html#logging-levels
-verbosity: DEBUG
+verbosity: INFO
 extra_flags: [ 'enable_decimals' ]
